[package]
name = "pulsar-ssd1306"
version = "0.1.0"
authors = ["Shane Vitarana <shanev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.1.7"
embedded-graphics = "0.6.2"
linux-embedded-hal = "0.3.0"
ssd1306 = "0.4.0"
